<resources>
    <string name="app_name">Ems</string>

    <!-- Tabs -->
    <string name="tab_text_1">Updates</string>
    <string name="tab_text_2">Account</string>
    <string name="tab_text_3">Support</string>
    <!-- Fragments -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>

    <!-- Register placeholder text -->
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_otp">Enter OTP</string>

    <!-- Register placeholder text -->
    <string name="otp_btn_confirm">Confirm</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="otp_txt_password">Password</string>
    <string name="otp_password">Password</string>

    <!-- Font awesome -->
    <string name="label1">This is an example {fa-smile-o} {fa-thumbs-o-up}</string>
    <string name="label2">{fa-font-awesome} Font Awesome</string>
    <string name="eula">End-User License Agreement (EULA) of EMS\n\n
This End-User License Agreement ("EULA") is a legal agreement between you and paulphoku
\n\n
This EULA agreement governs your acquisition and use of our EMS software ("Software") directly from paulphoku or indirectly through a paulphoku authorized reseller or distributor (a "Reseller").
\n\n
Please read this EULA agreement carefully before completing the installation process and using the EMS software. It provides a license to use the EMS software and contains warranty information and liability disclaimers.
\n\n
If you register for a free trial of the EMS software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the EMS software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.
\n\n
If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.
\n\n
This EULA agreement shall apply only to the Software supplied by paulphoku herewith regardless of whether other software is referred to or described herein. The terms also apply to any paulphoku updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by EULA Template for EMS.
\n\n
License Grant
paulphoku hereby grants you a personal, non-transferable, non-exclusive licence to use the EMS software on your devices in accordance with the terms of this EULA agreement.
\n\n
You are permitted to load the EMS software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the EMS software.
\n\n
You are not permitted to:
\n\n
Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
Allow any third party to use the Software on behalf of or for the benefit of any third party
Use the Software in any way which breaches any applicable local, national or international law
use the Software for any purpose that paulphoku considers is a breach of this EULA agreement
Intellectual Property and Ownership
paulphoku shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of paulphoku.
\n\n
paulphoku reserves the right to grant licences to use the Software to third parties.
\n\n
Termination
This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to paulphoku.
\n\n
It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.
\n\n
Governing Law
This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of za.</string>
    <string-array name="array_technology">
        <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string-array>

</resources>
