<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/enter_otp"
        android:paddingVertical="35dp"
        android:textAlignment="center"
        android:textSize="70sp"
        android:fontFamily="cursive"
        android:textColor="#ffffff"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bgtext"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/otp_password"
        android:textColor="#D95525"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_txt_password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_btn_confirm"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg"
        android:textColor="#ffffff"
        android:onClick="launchHomeActivity"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_resend"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"

        />
</LinearLayout>
