<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/register"
        android:paddingVertical="35dp"
        android:textAlignment="center"
        android:textSize="70sp"
        android:fontFamily="cursive"
        android:textColor="#ffffff"
        android:background="@drawable/bgtext"
        android:layout_marginBottom="25dp"
        />
    //Email
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="Email Address"
        android:textColor="#D95525"
        />
    <EditText
        android:id="@+id/txtRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:inputType="textEmailAddress" />
    //First name

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/reg_username"
        android:textColor="#D95525" />

    <EditText
        android:id="@+id/txtRegUsrName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:importantForAutofill="no"
        android:inputType="text" />
    //Password
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/reg_password"
        android:textColor="#D95525"
        />

    <EditText
        android:id="@+id/txtRegPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/reg_confirm_password"
        android:textColor="#D95525"
        />

    <EditText
        android:id="@+id/txtRegPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg"
        android:textColor="#ffffff"
        android:onClick="launchOtpActivity"
        android:id="@+id/btnReg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already registered? Login!"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:onClick="launchLoginActivity"
        />

</LinearLayout>